--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,15 +1,14 @@
 .root {
-    
-    font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    text-rendering: optimizeLegibility;
-    font-size: 16px;
-    background-color: #2A2C2F;
-    margin: 0px;
-    padding: 0px;
-   /* overflow-x: hidden;*/
+  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
+  font-size: 16px;
+  background-color: #2a2c2f;
+  margin: 0px;
+  padding: 0px;
+  /* overflow-x: hidden;*/
 }
