--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,5 +1,5 @@
 .place__url-heading {
-  margin: 0px 0px 12pх;
+  margin: 0px 0px 12px;
   padding: 0px;
   font-style: normal;
   font-weight: 400;
