--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,35 +1,30 @@
 .cover {
-  box-sizing: border-box;
-  margin: 96px 48px 92px;
-  /* resolution 1024 = margin: 96px 0px 92px; */
-  /* resolution 768 =  margin: 90px 0px 88px; */
-  /* resolution 320 =  margin: 66px 0px 64px; */
   width: calc(100% - 96px);
   /* resolution 1024 = width:100%; */
-  height: 740px;
-  /* resolution 1024 = height: 640px; */
-  /* resolution 768 = height: 480px; */
-  /* resolution 320 = height: 200px; */
+  max-width: 1280px;
+  box-sizing: border-box;
+  padding: 0px;
+  margin: 92px 48px 92px; /*Отступ между секциями не совпадает с макетом 320px/768 ok*/
+  /* resolution 1024 = margin: 92px 0px 92px; */
+  /* resolution 768 =  margin: 90px 0px 88px; */
+  /* resolution 320 =  margin: 66px 0px 64px; */
 }
 
 @media screen and (max-width: 1024px) {
   .cover {
-    margin: 96px 0px 92px;
     width: 100%;
-    height: 640px;
+    margin: 92px 0px 92px; /*Отступ между секциями не совпадает с макетом 320px/768 ok*/
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover {
-    margin: 90px 0px 88px;
-    height: 480px;
+    margin: 90px 0px 88px; /*Отступ между секциями не совпадает с макетом 320px/768 OK*/
   }
 }
 
 @media screen and (max-width: 320px) {
   .cover {
-    margin: 66px 0px 64px;
-    height: 200px;
+    margin: 66px 0px 64px; /*Отступ между секциями не совпадает с макетом 320px/768 OK*/
   }
 }
