--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,10 +1,20 @@
 .cover__overlay {
   padding: 0px;
   margin: 0px;
+  text-decoration: none;
+  text-decoration-line: none;
   position: relative;
+  /*margin -- нужно центрировать элемент через flex на родительском элементе, это сохранит центрирование при изменении количества строчек текста OK*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   box-sizing: border-box;
   width: 100%;
-  height: 100%;
+  min-height: 740px; /*height: 740px; -- Фиксированные значения высоты могут привести к проблемам с версткой при добавлении контента, будет выходит за границы элемента. Вместо 'height' больше подходит 'min-height'. ПРОБЛЕМА!!*/
+  /* resolution 1024 = height: 640px; */
+  /* resolution 768 = height: 480px; */
+  /* resolution 320 = height: 200px; */
   background-image: url(../../../images/overlay__background.jpg);
   background-size: cover;
   background-position: center;
@@ -24,4 +34,24 @@
 
 .cover__overlay:hover::before {
   opacity: 0.8;
+}
+@media screen and (max-width: 1024px) {
+  .cover__overlay {
+    width: 100%;
+    min-height: 640px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover__overlay {
+    width: 100%;
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover__overlay {
+    width: 100%;
+    min-height: 200px;
+  }
 }
