--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,7 +3,7 @@
   padding: 0px;
   margin: 32px auto 0px;
   /* resolution 320 =  margin: 16px auto 0px; */
-  width: 360px;
+  max-width: 360px;
   /* resolution 320 =  width: 288px; */
   font-style: normal;
   font-weight: 400;
@@ -17,17 +17,17 @@
   color: #ffffff;
 }
 
-@media screen and (max-width: 560px) {
+@media screen and (max-width: 768px) {
   .cover__subtitle {
-    font-size: calc(0.875rem + 0.3vw);
-    width: calc(250px + 10vw);
+    font-size: 2.34vw;
   }
 }
 
 @media screen and (max-width: 320px) {
   .cover__subtitle {
-    width: 288px;
+    max-width: 288px;
     margin: 16px auto 0px;
     font-size: 0.875rem;
+    line-height: 1.14;
   }
 }
