--- a/blocks/footer/__row-links/footer__row-links.css
+++ b/blocks/footer/__row-links/footer__row-links.css
@@ -3,11 +3,14 @@
   display: flex;
   margin: 0px;
   padding: 0px;
-  row-gap: 32px;
+  column-gap: 18px;
 }
-@media screen and (max-width: 745px) {
+
+@media screen and (max-width: 600px) {
   .footer__row-links {
     flex-direction: column;
-    margin: 0px 0px 48px;
+    justify-content: flex-start;
+    row-gap: 32px; /*Можно лучше: отступы между дочерними блоками можно сделать через flex + column-gap на этом элементе, а собственные боковые отступы дочерних элементов обнулить. OK*/
+    column-gap: 0px;
   }
 }
