--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,14 +1,16 @@
 .header__lang-links {
-    list-style-type: none;
-    display: flex;
-    justify-content: space-between;
-    margin: 18px 0px 6px;
-    /* resolution 320 = 14px 0px 8px */
-    padding: 0%;
+  list-style-type: none;
+  display: flex;
+  /*Можно лучше: отступы между дочерними элементами можно сделать через flex + column-gap, а собственные отступы элементов обнулить. ОК*/
+  column-gap: 18px;
+  justify-content: space-between;
+  margin: 18px 0px 6px;
+  /* resolution 320 = 14px 0px 8px */
+  padding: 0%;
 }
 
 @media screen and (max-width: 320px) {
-    .header__lang-links {
-        margin: 14px 0px 8px;
-    }
+  .header__lang-links {
+    margin: 14px 0px 8px;
+  }
 }
