--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,43 +1,46 @@
 .lead__subtitle {
-    margin: 0px 172px 64px;
-    /* resolution 1024 = 0px 144px 56px */
-    /* resolution 768 = 0px 64px 32px */
-    /* resolution 320 = 0px 16px 40px */
-    padding: 0px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 1.875rem;
-    /* 30/16 = 1.875 */
-    /* resolution 320 = 16/16 = 1 */
-    line-height: 1.2;
-    /* resolution 320 = 1.25*/
-    text-align: center;
-    color: #FFFFFF;
+  margin: 0px auto 64px;
+  /* resolution 1024 = 0px auto 56px */
+  /* resolution 768 = 0px auto 56px */
+  /* resolution 320 = 0px auto 40px */
+  padding: 0px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.875rem;
+  /* 30/16 = 1.875 */
+  /* resolution 320 = 16/16 = 1 */
+  line-height: 1.2;
+  /* resolution 320 = 1.25*/
+  text-align: center;
+  color: #ffffff;
 }
 
 @media screen and (max-width: 1024px) {
-    .lead__subtitle {
-        margin: 0px 144px 56px;
-    }
+  .lead__subtitle {
+    margin: 0px auto 56px;
+  }
 }
+/*Отступ до изображения не совпадает с макетом 768px OK*/
 
 @media screen and (max-width: 768px) {
-    .lead__subtitle {
-        margin: 0px 64px 32px;
-    }
+  .lead__subtitle {
+    font-size: 3.906vw;
+    margin: 0px 64px 56px;
+  }
 }
+/*Брейкпоинты не сгруппированы. Если два брейкпоинта имеют небольшую пиксельную разницу в медиазапросе имеет смысл изменить разрешение и привести их к одинаковому значению.
+В этом файле и во всем проекте. OK*/
+/*от 425 и до 768 пикселей — от большого смартфона до вертикального положения планшета,*/
 
-@media screen and (max-width: 720px) {
-    .lead__subtitle {
-        /* margin: 0px auto 32px; */
-        font-size: calc(1rem + (100vw * 0.01));
-    }
+@media screen and (max-width: 425px) {
+  .lead__subtitle {
+    font-size: 1rem;
+    line-height: 1.25;
+  }
 }
 
 @media screen and (max-width: 320px) {
-    .lead__subtitle {
-        margin: 0px 16px 40px;
-        font-size: 1rem;
-        line-height: 1.25;
-    }
+  .lead__subtitle {
+    margin: 0px auto 40px;
+  }
 }
