--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,55 +1,38 @@
 .lead__title {
-    margin: 0px 132px 32px;
-    /* resolution 1024 = 0px 104px 32px */
-    /* resolution 768 = 0px 24px 32px */
-    /* resolution 320 = 0px 16px 16px */
-    padding: 0px;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 6rem;
-    /* 96/16 = 6 */
-    /* resolution 320 = 40px/16 = 2.5rem */
-    line-height: 1.04;
-    /* resolution 320 = 1.1*/
-    text-align: center;
-    color: #FFFFFF;
-}
-
-@media screen and (max-width: 1235px) {
-    .lead__title {
-        margin: 0px auto 32px;
-    }
-}
-
-@media screen and (max-width: 1024px) {
-    .lead__title {
-        margin: 0px 104px 32px;
-    }
-}
-
-@media screen and (max-width: 835px) {
-    .lead__title {
-        margin: 0px auto 32px;
-    }
+  margin: 0px auto 32px;
+  /* resolution 1024 = 0px 104px 32px */
+  /* resolution 768 = 0px 24px 32px */
+  /* resolution 320 = 0px 16px 16px */
+  padding: 0px;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 6rem;
+  /* 96/16 = 6 */
+  /* resolution 320 = 40px/16 = 2.5rem */
+  line-height: 1.04;
+  /* resolution 320 = 1.1*/
+  text-align: center;
+  color: #ffffff;
 }
 
 @media screen and (max-width: 768px) {
-    .lead__title {
-        margin: 0px 24px 32px;
-    }
+  .lead__title {
+    font-size: 12.5vw;
+    margin: 0px 3.125% 32px;
+  }
 }
-
-@media screen and (max-width: 720px) {
-    .lead__title {
-        margin: 0px auto 32px;
-        font-size: calc(2.5rem + (100vw * 0.015));
-    }
+/*Брейкпоинты не сгруппированы. Если два брейкпоинта имеют небольшую пиксельную разницу в медиазапросе имеет смысл изменить разрешение и привести их к одинаковому значению.
+В этом файле и во всем проекте. OK*/
+/*от 425 и до 768 пикселей — от большого смартфона до вертикального положения планшета,*/
+@media screen and (max-width: 425px) {
+  .lead__title {
+    font-size: 2.5rem;
+    line-height: 1.1;
+  }
 }
 
 @media screen and (max-width: 320px) {
-    .lead__title {
-        margin: 0px 16px 16px;
-        font-size: 2.5rem;
-        line-height: 1.1;
-    }
+  .lead__title {
+    margin: 0px 16px 16px;
+  }
 }
