--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -9,14 +9,11 @@
   /* resolution 320|768 = 1 */
   letter-spacing: 2px;
   color: #aaaaaa;
+  text-transform: uppercase; /*Можно лучше: вместо явно заглавных букв можно использовать text-transform: uppercase*/
 }
-
+/*Значения в media не должны дублировать уже заданные значения, 
+это приводит к сложностям сопровождения из-за необходимости менять значения в двух/трех местах !ОК!*/
 @media screen and (max-width: 768px) {
-  .place__url-heading {
-    line-height: 1;
-  }
-}
-@media screen and (max-width: 320px) {
   .place__url-heading {
     line-height: 1;
   }
