--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -8,7 +8,12 @@
   text-rendering: optimizeLegibility;
   font-size: 16px;
   background-color: #2a2c2f;
-  margin: 0px;
+  /*контент должен центрироваться по ширине и не быть шире чем в макете 
+  (макет для 1280px - это максимальная ширина), 
+  сейчас контент растягивается по ширине браузера OK*/
+  width: 100vw;
+  max-width: 1280px;
+  margin: 0px auto;
   padding: 0px;
-  /* overflow-x: hidden;*/
+  /*overflow-x: hidden;*/
 }
