--- a/pages/index.css
+++ b/pages/index.css
@@ -1,26 +1,23 @@
 /*========import styles normalize======*/
 @import url(../vendor/normalize.css);
 /*========import styles fonts======*/
-
-@import url(../fonts/fonts.css);
-
+/* Шрифты -- это код сторонних разработчиков, сейчас подключение файла не совпадает с правилами БЭМ, которые применяются в нашем курсе.
+Подробнее про это в разделе "Подключаем код сторонних разработчиков" и в задании этого раздела ОК*/
+@import url(../vendor/fonts/fonts.css);
 /*========import styles root=============*/
 /*Глобальные стили,шрифты,типовые компоненты которые используются в разных блоках */
 @import url(../blocks/root/root.css);
-
 /*header*/
 /*========import styles header=============*/
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
+@import url(../blocks/header/__lang-item/header__lang-item.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
-@import url(../blocks/header/__lang-link/_status/header__lang-link_status_check.css);
-@import url(../blocks/header/__lang-link/_status/header__lang-link_status_uncheck.css);
-
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
 /*content*/
 /*========import styles content=============*/
 @import url(../blocks/content/content.css);
-
 /*lead*/
 /*========import styles lead=============*/
 @import url(../blocks/lead/lead.css);
@@ -28,7 +25,6 @@
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
-
 /*intro*/
 /*========import styles intro=============*/
 @import url(../blocks/intro/intro.css);
@@ -36,21 +32,16 @@
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__list-item/intro__list-item.css);
-@import url(../blocks/intro/__list-item/_digit/intro__list-item_digit.css);
-
-
+@import url(../blocks/intro/__digit/intro__digit.css);
 /*photo-grid*/
 /*========import styles photo-grid=============*/
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__items/photo-grid__items.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 @import url(../blocks/photo-grid/__image/photo-grid__image.css);
-
-
 /*places*/
 /*========import styles places=============*/
 @import url(../blocks/places/places.css);
-
 /*place*/
 /*========import styles place=============*/
 @import url(../blocks/place/place.css);
@@ -60,10 +51,7 @@
 @import url(../blocks/place/__link/place__link.css);
 @import url(../blocks/place/__text/place__text.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
-@import url(../blocks/place/__image/place__image.css);
-@import url(../blocks/place/);
-
-
+@import url(../blocks/place/__image/place__image.css); /*Указан путь к каталогу вместо файла ОК*/
 /* cover */
 /*========import styles cover=============*/
 @import url(../blocks/cover/cover.css);
@@ -71,18 +59,10 @@
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__link/cover__link.css);
 @import url(../blocks/cover/__overlay/cover__overlay.css);
-
 /*footer*/
 /*========import styles footer=============*/
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__row-links/footer__row-links.css);
 @import url(../blocks/footer/__row-link/footer__row-link.css);
 @import url(../blocks/footer/__copyrigh/footer__copyrigh.css);
-@import url(../blocks/footer/__link/footer__link.css);
-
-
-
-
-
-
-
+@import url(../blocks/footer/__link/footer__link.css); /*Код не оформлен, лишние пустые строки ОК*/
