--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -13,7 +13,7 @@
   transition: opacity 0.5s linear;
 }
 .footer__link:hover {
-  opacity: 0.8; /*По макету нужно сделать состояние наведения opacity: 0.8; OK*/
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 600px) {
