--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -13,6 +13,6 @@
 
 @media screen and (max-width: 768px) {
   .lead__caption {
-    margin: 8px 0px 0px 24px; /*Боковой отступ не совпадает с макетом 768px OK*/
+    margin: 8px 0px 0px 24px;
   }
 }
