--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -4,6 +4,7 @@
   /* resolution 768 = 0px auto 56px */
   /* resolution 320 = 0px auto 40px */
   padding: 0px;
+  max-width: 640px; /*Ширина не совпадает с макетом 1024/1280 OK*/
   font-style: normal;
   font-weight: 400;
   font-size: 1.875rem;
@@ -14,31 +15,23 @@
   text-align: center;
   color: #ffffff;
 }
-
 @media screen and (max-width: 1024px) {
   .lead__subtitle {
     margin: 0px auto 56px;
   }
 }
-/*Отступ до изображения не совпадает с макетом 768px OK*/
-
 @media screen and (max-width: 768px) {
   .lead__subtitle {
     font-size: 3.906vw;
     margin: 0px 64px 56px;
   }
 }
-/*Брейкпоинты не сгруппированы. Если два брейкпоинта имеют небольшую пиксельную разницу в медиазапросе имеет смысл изменить разрешение и привести их к одинаковому значению.
-В этом файле и во всем проекте. OK*/
-/*от 425 и до 768 пикселей — от большого смартфона до вертикального положения планшета,*/
-
 @media screen and (max-width: 425px) {
   .lead__subtitle {
     font-size: 1rem;
     line-height: 1.25;
   }
 }
-
 @media screen and (max-width: 320px) {
   .lead__subtitle {
     margin: 0px auto 40px;
