--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -4,6 +4,7 @@
   /* resolution 768 = 0px 24px 32px */
   /* resolution 320 = 0px 16px 16px */
   padding: 0px;
+  max-width: 720px;
   font-style: normal;
   font-weight: 900;
   font-size: 6rem;
@@ -14,23 +15,18 @@
   text-align: center;
   color: #ffffff;
 }
-
 @media screen and (max-width: 768px) {
   .lead__title {
     font-size: 12.5vw;
     margin: 0px 3.125% 32px;
   }
 }
-/*Брейкпоинты не сгруппированы. Если два брейкпоинта имеют небольшую пиксельную разницу в медиазапросе имеет смысл изменить разрешение и привести их к одинаковому значению.
-В этом файле и во всем проекте. OK*/
-/*от 425 и до 768 пикселей — от большого смартфона до вертикального положения планшета,*/
 @media screen and (max-width: 425px) {
   .lead__title {
     font-size: 2.5rem;
     line-height: 1.1;
   }
 }
-
 @media screen and (max-width: 320px) {
   .lead__title {
     margin: 0px 16px 16px;
