--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -3,7 +3,6 @@
   margin: 0px;
   padding: 0px;
   width: 100%;
-  /*Можно лучше: задавать высоту элемента как пропорцию от ширины через 'aspect-ratio'. Это позволит избежать задание высоты и обработать изображения других размеров.OK*/
-  aspect-ratio: auto 1 / 1;
-  object-fit: contain;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
 }
