--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -16,18 +16,17 @@
   /* resolution 768 = 1.1 */
   color: #ffffff;
 }
-
 @media screen and (max-width: 768px) {
   .place__title {
+    max-width: 330px;
     font-size: 2.625rem;
     line-height: 1.09;
   }
 }
-
 @media screen and (max-width: 320px) {
   .place__title {
     padding: 0px 16px;
     font-size: 2rem;
-    line-height: 1.1;
+    line-height: 35px;
   }
 }
