--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,10 +1,12 @@
 .place__website {
+  box-sizing: border-box;
   grid-area: website;
   margin: 0px;
   padding: 0px;
   display: flex;
   flex-direction: column;
   align-self: flex-end;
+  row-gap: 12px;
 }
 @media screen and (max-width: 320px) {
   .place__website {
