--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,31 +1,29 @@
 .place {
-  margin: 0px auto;
+  box-sizing: border-box;
+  margin: 0px;
   padding: 0px;
   display: grid;
   grid-template-columns: 460px;
   grid-template-areas:
     'title website '
     'image text';
-  gap: 48px 40px;
-  /* resolution 1024 = gap: 48px 32px; */
-  /* resolution 768 =  gap: 48px 28px; */
+  gap: 44px 40px;
+  /* resolution 1024 = gap: 44px 32px; */
+  /* resolution 768 =  gap: 44px 28px; */
   /* resolution 320 =  gap: 32px 0px; */
 }
-
 @media screen and (max-width: 1024px) {
   .place {
-    gap: 48px 32px;
+    gap: 44px 32px;
     grid-template-columns: 440px;
   }
 }
-
 @media screen and (max-width: 768px) {
   .place {
-    gap: 48px 28px;
+    gap: 46px 28px;
     grid-template-columns: 340px;
   }
 }
-
 @media screen and (max-width: 630px) {
   .place {
     grid-template-columns: 100%;
@@ -36,7 +34,6 @@
       'text';
   }
 }
-
 @media screen and (max-width: 320px) {
   .place {
     grid-template-columns: 320px;
