--- a/pages/index.css
+++ b/pages/index.css
@@ -51,18 +51,17 @@
 @import url(../blocks/place/__link/place__link.css);
 @import url(../blocks/place/__text/place__text.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
-@import url(../blocks/place/__image/place__image.css); /*Указан путь к каталогу вместо файла ОК*/
+@import url(../blocks/place/__image/place__image.css);
 /* cover */
 /*========import styles cover=============*/
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
-@import url(../blocks/cover/__link/cover__link.css);
-@import url(../blocks/cover/__overlay/cover__overlay.css);
+@import url(../blocks/cover/__overlay/cover__overlay.css); /*Ошибка загрузки файла: cover__link.css:1  OK*/
 /*footer*/
 /*========import styles footer=============*/
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__row-links/footer__row-links.css);
 @import url(../blocks/footer/__row-link/footer__row-link.css);
 @import url(../blocks/footer/__copyrigh/footer__copyrigh.css);
-@import url(../blocks/footer/__link/footer__link.css); /*Код не оформлен, лишние пустые строки ОК*/
+@import url(../blocks/footer/__link/footer__link.css);
